dss-airflow-wrapper/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dss-airflow-service
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "false"
spec:
  rules:
  - http:
      paths:
      - path: /dss-airflow-service
        backend:
          serviceName: dss-wrapper-dss-airflow-wrapper-api
          servicePort: http
